<resources>

    <!--   service  -->
    <string name="lang_tag">en</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="stub" translatable="false">--</string>
    <string name="unknown_code" translatable="false">Unknown weather code</string>

    <!--  Common  -->
    <string name="app_name">WeatherApplication</string>
    <string name="content_description_start_drag">Start drag</string>
    <string name="content_description_temp">Temp</string>
    <string name="content_description_weather_ico">Weather</string>

    <string name="network_error">Network error!</string>

    <!--  units formatting  -->
    <string name="units_temp_f" translatable="false">%.0f°</string>
    <string name="units_feels_like_temp_f">Feels like %.0f°</string>

    <string name="units_today">Today</string>
    <string name="units_tomorrow">Tomorrow</string>

    <string name="units_dir_n">N</string>
    <string name="units_dir_nne">NNE</string>
    <string name="units_dir_ne">NE</string>
    <string name="units_dir_ene">ENE</string>
    <string name="units_dir_e">E</string>
    <string name="units_dir_ese">ESE</string>
    <string name="units_dir_se">SE</string>
    <string name="units_dir_sse">SSE</string>
    <string name="units_dir_s">S</string>
    <string name="units_dir_ssw">SSW</string>
    <string name="units_dir_sw">SW</string>
    <string name="units_dir_wsw">WSW</string>
    <string name="units_dir_w">W</string>
    <string name="units_dir_wnw">WNW</string>
    <string name="units_dir_nw">NW</string>
    <string name="units_dir_nnw">NNW</string>

    <string name="units_kph_f">%.1f km/h</string>
    <string name="units_mph_f">%.1f mi/h</string>
    <string name="units_kn_f">%.1f knot</string>
    <string name="units_mps_f">%.1f m/s</string>

    <string name="units_km_f">%.1f km</string>
    <string name="units_mi_f">%.1f mi</string>

    <string name="units_percent_pattern_f" translatable="false">%d %%</string>

    <string name="units_mbar_f">%.0f mBar</string>
    <string name="units_mm_hg_f">%.0f mm hg</string>

    <!--  weather info  -->
    <string name="air_quality_good_f">Good (%s)</string>
    <string name="air_quality_moderate_f">Moderate (%s)</string>
    <string name="air_quality_unhealthy_sens_f">Unhealthy for sensitive (%s)</string>
    <string name="air_quality_unhealthy_f">Unhealthy (%s)</string>
    <string name="air_quality_very_unhealthy_f">Very Unhealthy (%s)</string>
    <string name="air_quality_hazardous_f">Hazardous (%s)</string>

    <string name="uv_index_low_f">Low (%s)</string>
    <string name="uv_index_moderate_f">Moderate (%s)</string>
    <string name="uv_index_high_f">High (%s)</string>
    <string name="uv_index_very_high_f">Very high (%s)</string>
    <string name="uv_index_extreme_f">Extreme (%s)</string>

    <!--  Weather description  -->
    <string name="weather_description_200">Thunderstorm with light rain</string>
    <string name="weather_description_201">Thunderstorm with rain</string>
    <string name="weather_description_202">Thunderstorm with heavy rain</string>

    <string name="weather_description_230">Thunderstorm with light drizzle</string>
    <string name="weather_description_231">Thunderstorm with drizzle</string>
    <string name="weather_description_232">Thunderstorm with heavy drizzle</string>
    <string name="weather_description_233">Thunderstorm with hail</string>

    <string name="weather_description_300">Light Drizzle</string>
    <string name="weather_description_301">Drizzle</string>
    <string name="weather_description_302">Heavy Drizzle</string>

    <string name="weather_description_500">Light Rain</string>
    <string name="weather_description_501">Moderate Rain</string>
    <string name="weather_description_502">Heavy Rain</string>
    <string name="weather_description_511">Freezing Rain</string>
    <string name="weather_description_520">Light shower rain</string>
    <string name="weather_description_521">Shower rain</string>
    <string name="weather_description_522">Heavy shower rain</string>

    <string name="weather_description_600">Light snow</string>
    <string name="weather_description_601">Snow</string>
    <string name="weather_description_602">Heavy Snow</string>
    <string name="weather_description_610">Mix snow/rain</string>
    <string name="weather_description_611">Sleet</string>
    <string name="weather_description_612">Heavy sleet</string>
    <string name="weather_description_621">Snow shower</string>
    <string name="weather_description_622">Heavy snow shower</string>
    <string name="weather_description_623">Flurries</string>

    <string name="weather_description_700">Mist</string>
    <string name="weather_description_711">Smoke</string>
    <string name="weather_description_721">Haze</string>
    <string name="weather_description_731">Sand/dust</string>
    <string name="weather_description_741">Fog</string>
    <string name="weather_description_751">Freezing Fog</string>


    <string name="weather_description_800">Clear sky</string>
    <string name="weather_description_801">Few clouds</string>
    <string name="weather_description_802">Scattered clouds</string>
    <string name="weather_description_803">Broken clouds</string>
    <string name="weather_description_804">Overcast clouds</string>

    <string name="weather_description_900">Unknown Precipitation</string>

    <!--  Search city  -->
    <string name="search_input_hint">Print city name</string>
    <string name="search_city_not_found">Nothing found :(</string>
    <string name="search_title">Add a city</string>
    <string name="search_current_location">Current location</string>
    <string name="search_already_selected">This city has already been added!</string>

    <!--  Saved Locations  -->
    <string name="locations_undo">Undo</string>
    <string name="locations_title">List of locations</string>
    <string name="locations_wait">Please wait…</string>
    <string name="locations_removed">Removed</string>
    <string name="locations_hint">No added locations.\nAdd a city or enable weather by location.</string>
    <string name="locations_dialog_title">Hint</string>
    <string name="locations_dialog_message">For the app to work you need to add a new city or enable weather tracking by location</string>
    <string name="locations_dialog_button_ok">OK</string>

    <!--  Current forecast host (activity with viewpager)-->
    <string name="current_forecast_host_cities">Cities</string>
    <string name="current_forecast_host_other">Others</string>
    <string name="current_forecast_host_main">Main</string>
    <string name="current_forecast_host_settings">Settings</string>
    <string name="current_forecast_host_about_app">About app</string>
    <string name="current_forecast_host_change_location">Change locations</string>
    <string name="current_forecast_host_weather_notification">Weather notifications</string>

    <!--  Current forecast (frag)  -->
    <string name="current_forecast_char_separator" translatable="false">|</string>
    <string name="current_forecast_hourly_forecast">Hourly forecast</string>
    <string name="current_forecast_daily_forecast">Daily forecast</string>
    <string name="current_forecast_5_days">5 d.</string>
    <string name="current_forecast_10_days">10 d.</string>
    <string name="current_forecast_16_days">16 d.</string>
    <string name="current_forecast_more">Details</string>
    <string name="current_forecast_wind">Wind</string>
    <string name="current_forecast_pressure">Pressure</string>
    <string name="current_forecast_humidity">Humidity</string>
    <string name="current_forecast_precipitation">Precipitations</string>
    <string name="current_forecast_next_3_hours">Next 3 hours</string>
    <string name="current_forecast_next_6_hours">Next 6 hours</string>
    <string name="current_forecast_next_12_hours">Next 12 hours</string>
    <string name="current_forecast_environment">Environment</string>
    <string name="current_forecast_visibility">Visibility</string>
    <string name="current_forecast_air_quality">Air quality</string>
    <string name="current_forecast_uv_index">UV index</string>
    <string name="current_forecast_clouds">Clouds</string>

    <!--  Menu  -->
    <string name="menu_add_city">Add city</string>
    <string name="menu_add_location">Add new location</string>


    <!-- Preference -->
    <string name="settings_main_title">Settings</string>
    <string name="settings_units_title">Units</string>
    <string name="settings_data_title">App data</string>
    <string name="settings_common">Common</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_lang">Lang</string>
    <string name="settings_units">Units</string>
    <string name="settings_temp">Temp unit</string>
    <string name="settings_length">Length unit</string>
    <string name="settings_speed">Speed unit</string>
    <string name="settings_pressure">Pressure unit</string>
    <string name="settings_update_frequency">Update frequency</string>
    <string name="settings_update_frequency_summary">updating widgets and notifications.\nin hours</string>
    <string name="settings_app_data">App data</string>
    <string name="settings_keep_data_cache">Keep weather in cache</string>
    <string name="settings_keep_data_cache_summary">days</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_all_data">Clear all data</string>
    <string name="settings_clear_all_data_summary">cache, locations, settings</string>


    <!--  Daily Pages  -->
    <string name="daily_pages_16_days_forecast">16 days forecast</string>

</resources>
