<!--
  ~ Сreated by Igor Pokrovsky. 2020/5/16
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SeekBarPreference
        android:max="3"
        app:defaultValue="1"
        app:icon="@drawable/ic_time"
        app:key="max_cache_hours"
        app:min="1"
        app:selectable="false"
        app:showSeekBarValue="true"
        app:summary="@string/settings_keep_data_cache_summary"
        app:title="@string/settings_keep_data_cache" />

    <Preference
        app:icon="@drawable/ic_delete"
        app:title="@string/settings_clear_cache" />

    <Preference
        app:icon="@drawable/ic_delete"
        app:summary="@string/settings_clear_all_data_summary"
        app:title="@string/settings_clear_all_data" />

</PreferenceScreen>
