<?xml version="1.0" encoding="utf-8"?><!--
  ~ Сreated by Igor Pokrovsky. 2020/4/28
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/title_main"
        android:title="@string/current_forecast_host_main">
        <menu>

            <!-- TODO hidden-->
            <item
                android:checked="true"
                android:id="@+id/menuWeatherNotifications"
                android:title="@string/current_forecast_host_weather_notification"
                android:icon="@drawable/ic_notifications"
                android:visible="false" />

            <item
                android:checked="true"

                android:id="@+id/menuChangeLocations"
                android:icon="@drawable/ic_change_locations"
                android:title="@string/current_forecast_host_change_location" />
        </menu>
    </item>


    <item
        android:id="@+id/menuListLocations"
        android:title="@string/current_forecast_host_cities">
        <menu>
            <!--     this is stub to be able to programmatically find this menu       -->
            <item
                android:title="Stub"
                tools:ignore="HardcodedText" />
        </menu>
    </item>

    <item
        android:id="@+id/title_others"
        android:title="@string/current_forecast_host_other">
        <menu>
            <item
                android:checked="true"
                android:id="@+id/menuSettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/current_forecast_host_settings" />
            <item
                android:checked="true"
                android:id="@+id/menuAboutApp"
                android:icon="@drawable/ic_about_app"
                android:title="@string/current_forecast_host_about_app" />
        </menu>
    </item>
</menu>