<!--
  ~ Сreated by Igor Pokrovsky. 2020/5/16
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="cel"
        app:entries="@array/units_of_temp_entries"
        app:entryValues="@array/units_of_temp_values"
        app:icon="@drawable/ic_thermometer"
        app:key="unit_of_temp"
        app:title="@string/settings_temp"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="km"
        app:entries="@array/units_of_length_entries"
        app:entryValues="@array/units_of_length_values"
        app:icon="@drawable/ic_ruler"
        app:key="unit_of_length"
        app:title="@string/settings_length"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="kph"
        app:entries="@array/units_of_speed_entries"
        app:entryValues="@array/units_of_speed_values"
        app:icon="@drawable/ic_speed_unit"
        app:key="unit_of_speed"
        app:title="@string/settings_speed"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="mbar"
        app:entries="@array/units_of_pressure_entries"
        app:entryValues="@array/units_of_pressure_values"
        app:icon="@drawable/ic_pressure"
        app:key="unit_of_pressure"
        app:title="@string/settings_pressure"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
