<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Сreated by Igor Pokrovsky. 2020/5/9
  -->

<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_current_forecast_main">


    <TextView
        style="@style/SecondaryText.Lowest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:paddingHorizontal="@dimen/medium_margin"
        android:text="@string/current_forecast_daily_forecast" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currentForecastDailyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        tools:listitem="@layout/item_daily_forecast" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/currentForecastDaysSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        app:checkedButton="@id/currentForecastDisplay5days"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentForecastDisplay5days"
            style="@style/TextButton.SecondaryLowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_forecast_5_days" />

        <com.google.android.material.button.MaterialButton
            style="@style/TextButton.SecondaryLowest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:clickable="false"
            android:insetLeft="@dimen/small_margin"
            android:insetRight="@dimen/small_margin"
            android:text="@string/current_forecast_char_separator" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentForecastDisplay10days"
            style="@style/TextButton.SecondaryLowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_forecast_10_days" />

        <com.google.android.material.button.MaterialButton
            style="@style/TextButton.SecondaryLowest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:clickable="false"
            android:insetLeft="@dimen/small_margin"
            android:insetRight="@dimen/small_margin"
            android:text="@string/current_forecast_char_separator" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentForecastDisplay16days"
            style="@style/TextButton.SecondaryLowest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetLeft="@dimen/small_margin"
            android:insetRight="@dimen/small_margin"
            android:text="@string/current_forecast_16_days" />


    </com.google.android.material.button.MaterialButtonToggleGroup>
</merge>