<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeScreenBackground"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/searchAppbar"
        style="@style/LiftingToolbarCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/searchToolbar"
                style="@style/ToolbarMainStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/search_title" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutMainStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    style="@style/TextInputEditMainStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_input_hint"
                    android:paddingVertical="@dimen/medium_padding"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginHorizontal="@dimen/medium_margin"
                style="@style/DividerDefaultStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchCurrentLocation"
                style="@style/TextButton.PrimaryLowest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="@dimen/medium_padding"
                android:paddingVertical="@dimen/small_padding"
                android:text="@string/search_current_location"
                app:icon="@drawable/ic_my_location" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.nigtime.weatherapplication.common.customview.CrossFadeAnimatorLayout
        android:id="@+id/searchViewSwitcher"
        android:layout_width="match_parent"
        style="@style/CrossFadeDefaultStyle"
        android:layout_height="match_parent"
        app:crossDisplayedChild="0">


        <TextView
            android:id="@+id/searchHint"
            style="@style/PrimaryText.Lowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_widget_hint" />

        <ProgressBar
            android:id="@+id/searchProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="ifContentScrolls"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_search_city" />

        <TextView
            android:id="@+id/searchNotFound"
            style="@style/PrimaryText.Lowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_city_not_found" />

    </com.nigtime.weatherapplication.common.customview.CrossFadeAnimatorLayout>
</LinearLayout>